fix: :lipstick: add clearfix to left and right alignments

--- a/src/scss/base/_alignments.scss
+++ b/src/scss/base/_alignments.scss
@@ -7,6 +7,13 @@
 	display: block;
 }
 
+.alignleft {
+	clear: left;
+}
+
+.alignright {
+	clear: right;
+}
 .aligncenter {
 	clear: both;
 	margin-right: auto;
